Removed overflow hidden from site - fixing menu.

--- a/wp-content/themes/appmobi_mainsite_v1/style.css
+++ b/wp-content/themes/appmobi_mainsite_v1/style.css
@@ -1733,7 +1733,6 @@ img#wpstats {
 	}
 	.site {
 		margin: 0 auto;
-		overflow: hidden;
 	}
 	body.template-front-page .site-content {
 		width: 100%;
